# wasm-lang-temp

./: .gitattributes  .gitignore  README.md  spec.md  test.sh
benches/: Cargo.toml  README.md
benches/benches/: tree_sitter_vs_custom_parser.rs
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml  build.rs
codegen/src/: formatter.rs  gen_wasm.rs  gen_wat.rs  lib.rs
codegen/tests/: codegen-tests.rs  gen-wasm-tests.rs  gen_wasm_test_expected.wasm
compiler/: .gitignore  Cargo.toml  build.rs
compiler/s-expr-formatter/: Package.swift  README.md
compiler/s-expr-formatter/Sources/s-expr-formatter/: s_expr_formatter.swift
compiler/src/: lib.rs
compiler/src/codegen/: gen_wasm.rs  gen_wat.rs  mod.rs
compiler/src/formatter/: mod.rs
compiler/tests/: tests.rs
compiler/tests/codegen/: math.rs  tests.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
lexer/tests/: lexer-tests.rs
old_parser/: Cargo.toml
old_parser/src/parser/: nodes.rs
old_parser/tests/: integration-tests.rs
old_parser/tests/parser/: post_parse_tests.rs  tests.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/lexer/: mod.rs
parser/src/parser/: mod.rs  nodes.rs  parser.rs  post_parse.rs
parser/tests/: integration-tests.rs  parser-tests.rs
parser/tests/lexer/: tests.rs
parser/tests/parser/: tests.rs
tree-sitter/: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  test.sh
tree-sitter/corpus/: tests.test
tree-sitter/src/: grammar.json  node-types.json  parser.c  scanner.c
wat-conversion-syntax/: examples.wat  functions.md
(+5 files in other folders)
