[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
tree-sitter-wasm-lang = { path = "../tree-sitter" }
tree-sitter = "~0.20"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
