[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Everaert"]

[dependencies]
tree-sitter-wasm-lang = { path = "../tree-sitter" }
tree-sitter = "~0.20"
concat-string = "1.0.1"
wabt = "0.10"

[dev-dependencies]
regex = "1.5.6"
wasmer = "2.2"

[build-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
